RESOLVED FIXED 50059
Calculate the -webkit-pixel-radio using the device DPI.
https://bugs.webkit.org/show_bug.cgi?id=50059
Summary Calculate the -webkit-pixel-radio using the device DPI.
Kenneth Rohde Christiansen
Reported 2010-11-25 02:01:53 PST
Patch coming. This is related to viewport meta tag and explains where the 160 comes from, which is why I'm cc'ing the guys who brought up that question.
Attachments
Patch (5.64 KB, patch)
2010-11-25 03:08 PST, Kenneth Rohde Christiansen
commit-queue: commit-queue-
Kenneth Rohde Christiansen
Comment 1 2010-11-25 03:08:53 PST
Simon Hausmann
Comment 2 2010-11-25 03:21:23 PST
Comment on attachment 74845 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=74845&action=review Did you intend to set the patch to r? first? > WebKit/qt/Api/qwebpage.cpp:2510 > + d->pixelRatio = conf.devicePixelRatio; This makes the const function in QWebPage have a side-effect. Wouldn't it be cleaner to change the pixelRatio right before emitting the viewportAttributesChanged() signal?
WebKit Commit Bot
Comment 3 2010-11-25 03:37:42 PST
The commit-queue encountered the following flaky tests while processing attachment 74845 [details]: inspector/syntax-highlight-css.html java/lc3/JSObject/ToObject-001.html Please file bugs against the tests. These tests were authored by ap@webkit.org, keishi@webkit.org, pfeldman@chromium.org, and yurys@chromium.org. The commit-queue is continuing to process your patch.
Kenneth Rohde Christiansen
Comment 4 2010-11-25 03:52:35 PST
(In reply to comment #2) > (From update of attachment 74845 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=74845&action=review > > Did you intend to set the patch to r? first? > > > WebKit/qt/Api/qwebpage.cpp:2510 > > + d->pixelRatio = conf.devicePixelRatio; > > This makes the const function in QWebPage have a side-effect. Wouldn't it be cleaner to change the pixelRatio right before emitting the viewportAttributesChanged() signal? That won't work unfortunately. We only know the pixel ratio after computing the viewport.
WebKit Commit Bot
Comment 5 2010-11-25 03:58:13 PST
The commit-queue encountered the following flaky tests while processing attachment 74845 [details]: inspector/console-log-before-inspector-open.html compositing/iframes/overlapped-nested-iframes.html Please file bugs against the tests. These tests were authored by caseq@chromium.org, eric@webkit.org, simon.fraser@apple.com, and yurys@chromium.org. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6 2010-11-25 04:43:12 PST
The commit-queue encountered the following flaky tests while processing attachment 74845 [details]: http/tests/appcache/foreign-fallback.html Please file bugs against the tests. These tests were authored by ap@webkit.org. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 7 2010-11-25 04:44:00 PST
Comment on attachment 74845 [details] Patch Rejecting patch 74845 from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=eseidel-cq-sl', 'land-attachment', '--force-clean', '--ignore-builders', '--non-interactive', '--parent-command=commit-queue', 74845]" exit_code: 1 Last 500 characters of output: dit Fetching: https://bugs.webkit.org/show_bug.cgi?id=50059&ctype=xml Processing 1 patch from 1 bug. Cleaning working directory Updating working directory Processing patch 74845 from bug 50059. Andreas Kling and Simon Hausmann found in /Projects/CommitQueue/WebKit/qt/ChangeLog does not appear to be a valid reviewer according to committers.py. ERROR: /Projects/CommitQueue/WebKit/qt/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/6390045
Andreas Kling
Comment 8 2010-11-25 05:41:51 PST
Note You need to log in before you can comment on or make changes to this bug.