2010-11-25  Kenneth Rohde Christiansen  <kenneth@webkit.org>

Reviewed by Andreas Kling and Simon Hausmann.

        [Qt] Calculate the -webkit-pixel-radio using the device DPI.
        http://webkit.org/b/50059

        Also, update the documentation on what a DIP is and how to override
        the device DPI in the case the system reports the wrong one (which
        unfortunately is common on X11).

        * Api/qwebpage.cpp:
        (QWebPagePrivate::QWebPagePrivate):
        (QWebPage::viewportAttributesForSize):
        * Api/qwebpage_p.h:
        * WebCoreSupport/ChromeClientQt.cpp:
        (WebCore::ChromeClientQt::scaleFactor):


Canonical link: https://commits.webkit.org/63185@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72726 268f45cc-cd09-0410-ab3c-d52691b4dbfc